--- a/SIGETER/index.html
+++ b/SIGETER/index.html
@@ -9,8 +9,6 @@
 </head>
 <body>
 
-<!-- TEST APA INI MASUK KE GITHUB -->
-
 <header>
   <div class="logo">SIGETER</div>
   <nav>
@@ -20,7 +18,7 @@
     <a href="testimoni.html">Testimonials</a>
   </nav>
   <div class="icons">
-    <a href="#">
+    <a href="cart.html">
         <img src="icons/cart-icon.png" alt="Cart Icon">
     </a>
     <a href="signin.html">
