--- a/SIGETER/signup.html
+++ b/SIGETER/signup.html
@@ -18,7 +18,7 @@
     <a href="#">Testimonials</a>
   </nav>
   <div class="icons">
-    <a href="">
+    <a href="cart.html">
         <img src="icons/cart-icon.png" alt="Cart Icon">
     </a>
     <a href="">
