--- a/SIGETER/about.html
+++ b/SIGETER/about.html
@@ -16,6 +16,17 @@
     <a href="product.html">Products</a>
     <a href="testimoni.html">Testimonials</a>
   </nav>
+  <div class="icons">
+    <a href="cart.html">
+        <img src="icons/cart-icon.png" alt="Cart Icon">
+    </a>
+    <a href="signin.html">
+        <img src="icons/user-icon.png" alt="User Icon">
+    </a>
+    <a href="#">
+        <img src="icons/settings-icon.png" alt="Settings Icon">
+    </a>
+  </div>
 </header>
 
 <section class="about-section">
