--- a/SIGETER/index.html
+++ b/SIGETER/index.html
@@ -28,6 +28,20 @@
         <img src="icons/settings-icon.png" alt="Settings Icon">
     </a>
   </div>
+  <!-- Profile Picture Dropdown -->
+  <!-- <div class="icons">
+    <img src="images/profile-picture.jpg" alt="User Profile" id="profile-icon" class="profile-icon">
+    <div class="dropdown-content">
+      <a href="profile.html">
+        My Profile 
+      </a>
+      <a href="orders.html">
+        My Orders <img src="icons/cart-icon.png" alt="Cart Icon">
+      </a>
+      <a href="settings.html">
+        Settings <img src="icons/settings-icon.png" alt="Settings Icon">
+      </a>
+    </div> -->
 </header>
 
 <section class="hero">
