--- a/SIGETER/about.html
+++ b/SIGETER/about.html
@@ -23,7 +23,7 @@
     <a href="signin.html">
         <img src="icons/user-icon.png" alt="User Icon">
     </a>
-    <a href="#">
+    <a href="profile.html">
         <img src="icons/settings-icon.png" alt="Settings Icon">
     </a>
   </div>
