--- a/SIGETER/index.html
+++ b/SIGETER/index.html
@@ -10,7 +10,18 @@
 <body>
 
 <header>
-  <div class="logo">SIGETER</div>
+  <div class="logo">SIGETER
+    <!-- Sidebar -->
+  <div class="sidebar" id="sidebar">
+    <nav>
+      <a href="#">Home</a>
+      <a href="about.html">About Us</a>
+      <a href="product.html">Products</a>
+      <a href="testimoni.html">Testimonials</a>
+      <a href="cart.html">Cart</a>
+    </nav>
+  </div>
+  </div>
   <nav>
     <a href="#">Home</a>
     <a href="about.html">About Us</a>
@@ -24,7 +35,7 @@
     <a href="signin.html">
         <img src="icons/user-icon.png" alt="User Icon">
     </a>
-    <a href="#">
+    <a href="profile.html">
         <img src="icons/settings-icon.png" alt="Settings Icon">
     </a>
   </div>
