--- a/SIGETER/profile.html
+++ b/SIGETER/profile.html
@@ -27,14 +27,10 @@
         <img src="icons/settings-icon.png" alt="Settings Icon">
     </a>
   </div>
-  <!-- <div class="icons">
-    <img src="images/profile-picture.jpg" alt="User Profile" id="profile-icon" class="profile-icon">
-    <div class="dropdown-content">
-      <a href="profile.html">My Profile</a>
-      <a href="orders.html">My Orders <img src="icons/cart-icon.png" alt="Cart Icon"></a>
-      <a href="settings.html">Settings <img src="icons/settings-icon.png" alt="Settings Icon"></a>
-    </div>
-  </div> -->
+  <!-- Logout Button in Header -->
+  <div class="logout-header">
+    <a href="logout.html" class="btn-logout">Logout</a>
+  </div>
 </header>
 
 <section class="profile-section">
