--- a/SIGETER/edit_profile.html
+++ b/SIGETER/edit_profile.html
@@ -24,6 +24,17 @@
       <a href="settings.html">Settings <img src="icons/settings-icon.png" alt="Settings Icon"></a>
     </div>
   </div>
+  <div class="icons">
+    <a href="cart.html">
+        <img src="icons/cart-icon.png" alt="Cart Icon">
+    </a>
+    <a href="signin.html">
+        <img src="icons/user-icon.png" alt="User Icon">
+    </a>
+    <a href="#">
+        <img src="icons/settings-icon.png" alt="Settings Icon">
+    </a>
+  </div>
 </header>
 
 <section class="edit-profile-section">
