--- a/SIGETER/about.html
+++ b/SIGETER/about.html
@@ -13,6 +13,7 @@
   <nav>
     <a href="index.html">Home</a>
     <a href="about.html">About Us</a>
+    <a href="event-category.html">Event Categories</a>
     <a href="product.html">Products</a>
     <a href="testimoni.html">Testimonials</a>
   </nav>
@@ -51,25 +52,25 @@
   <div class="team-member">
     <img src="images/team1.jpg" alt="Team Member 1">
     <h3>Clara Dian Anggraini  ( 15220083 )</h3>
-    <p>Ketua</p>
+    <p>"Ketua Kelompok"</p>
   </div>
   
   <div class="team-member">
     <img src="images/team2.jpg" alt="Team Member 2">
-    <h3>Putri Nur Utamy    ( 15220619 )</h3>
-    <p>Head</p>
+    <h3>Putri Nur Utamy   ( 15220619 )</h3>
+    <p>"Anggota Kelompok"</p>
   </div>
   
   <div class="team-member">
-    <img src="images/team3.jpg" alt="Team Member 3">
+    <img src="pict/robby.jpg" alt="Team Member 3">
     <h3>Robby Putra Pratama  ( 15220093 )</h3>
-    <p>Lead Developer</p>
+    <p>"Anggota Kelompok"</p>
   </div>
 
   <div class="team-member">
-    <img src="images/team2.jpg" alt="Team Member 2">
-    <h3>Jane Smith</h3>
-    <p>Head of Marketing</p>
+    <img src="pict/satya.jpg" alt="Team Member 2">
+    <h3>Satya Eko Nugroho   (15220224)</h3>
+    <p>"Anggota Kelompok"</p>
   </div>
 </section>
 
