--- a/SIGETER/product.html
+++ b/SIGETER/product.html
@@ -13,7 +13,8 @@
   <nav>
     <a href="index.html">Home</a>
     <a href="about.html">About Us</a>
-    <a href="#">Products</a>
+    <a href="event-category.html">Event Categories</a>
+    <a href="product.html">Products</a>
     <a href="testimoni.html">Testimonials</a>
   </nav>
   <div class="icons">
