--- a/SIGETER/edit_profile.html
+++ b/SIGETER/edit_profile.html
@@ -13,6 +13,7 @@
   <nav>
     <a href="index.html">Home</a>
     <a href="about.html">About Us</a>
+    <a href="event-category.html">Event Categories</a>
     <a href="product.html">Products</a>
     <a href="testimoni.html">Testimonials</a>
   </nav>
