--- a/SIGETER/index.html
+++ b/SIGETER/index.html
@@ -5,55 +5,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home Page</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="">
 </head>
 <body>
 
 <header>
-  <div class="logo">SIGETER
-    <!-- Sidebar -->
-  <div class="sidebar" id="sidebar">
-    <nav>
-      <a href="#">Home</a>
-      <a href="about.html">About Us</a>
-      <a href="product.html">Products</a>
-      <a href="testimoni.html">Testimonials</a>
-      <a href="cart.html">Cart</a>
-    </nav>
-  </div>
-  </div>
+  <!-- Logo to trigger sidebar -->
+  <div class="logo">SIGETER</div>
+
+  <!-- Main nav links in header -->
   <nav>
-    <a href="#">Home</a>
+    <a href="index.html">Home</a>
     <a href="about.html">About Us</a>
+    <a href="event-category.html">Event Categories</a>
     <a href="product.html">Products</a>
     <a href="testimoni.html">Testimonials</a>
   </nav>
+
   <div class="icons">
-    <a href="cart.html">
-        <img src="icons/cart-icon.png" alt="Cart Icon">
-    </a>
-    <a href="signin.html">
-        <img src="icons/user-icon.png" alt="User Icon">
-    </a>
-    <a href="profile.html">
-        <img src="icons/settings-icon.png" alt="Settings Icon">
-    </a>
+    <a href="cart.html"><img src="icons/cart-icon.png" alt="Cart Icon"></a>
+    <a href="signin.html"><img src="icons/user-icon.png" alt="User Icon"></a>
+    <a href="profile.html"><img src="icons/settings-icon.png" alt="Settings Icon"></a>
   </div>
-  <!-- Profile Picture Dropdown -->
-  <!-- <div class="icons">
-    <img src="images/profile-picture.jpg" alt="User Profile" id="profile-icon" class="profile-icon">
-    <div class="dropdown-content">
-      <a href="profile.html">
-        My Profile 
-      </a>
-      <a href="orders.html">
-        My Orders <img src="icons/cart-icon.png" alt="Cart Icon">
-      </a>
-      <a href="settings.html">
-        Settings <img src="icons/settings-icon.png" alt="Settings Icon">
-      </a>
-    </div> -->
 </header>
+
+<!-- Sidebar navigation -->
+<div class="sidebar">
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About Us</a>
+    <a href="event-category.html">Event Categories</a>
+    <a href="product.html">Products</a>
+    <a href="testimoni.html">Testimonials</a>
+  </nav>
+</div>
 
 <section class="hero">
   <div class="hero-content">
@@ -63,47 +47,7 @@
   </div>
 </section>
 
-<section class="featured-products">
-  <h2>Featured Products</h2>
-  <div class="product-list">
-    <div class="product-item">
-      <img src="#" alt="Product 1">
-      <h3>Product 1</h3>
-      <p>$19.99</p>
-      <a href="#" class="btn-secondary">View Product</a>
-    </div>
-    <div class="product-item">
-      <img src="images/product2.jpg" alt="Product 2">
-      <h3>Product 2</h3>
-      <p>$29.99</p>
-      <a href="#" class="btn-secondary">View Product</a>
-    </div>
-    <div class="product-item">
-      <img src="images/product3.jpg" alt="Product 3">
-      <h3>Product 3</h3>
-      <p>$39.99</p>
-      <a href="#" class="btn-secondary">View Product</a>
-    </div>
-  </div>
-</section>
-
-<section class="about-us">
-  <h2>About Us</h2>
-  <p>At SIGETER, we offer the best products to help make your life better. Our products are carefully curated and tested to ensure the highest quality.</p>
-  <a href="#" class="btn-primary">Learn More</a>
-</section>
-
-<section class="testimonials">
-  <h2>What Our Customers Are Saying</h2>
-  <div class="testimonial-item">
-    <p>"SIGETER has changed the way I shop online. The products are high quality and the service is excellent!"</p>
-    <p>- Imam Palepi</p>
-  </div>
-  <div class="testimonial-item">
-    <p>"I love the variety of products SIGETER offers. Great experience every time!"</p>
-    <p>- Jono Pakulo</p>
-  </div>
-</section>
+<!-- Your other sections (e.g., Featured Products, Testimonials, etc.) -->
 
 <footer>
   <div class="footer-content">
@@ -113,15 +57,9 @@
       <li><a href="#">Help</a></li>
     </ul>
     <div class="social-icons">
-      <a href="#">
-          <img src="icons/facebook.png" alt="Facebook">
-      </a>
-      <a href="#">
-          <img src="icons/whatsapp.png" alt="Whatsapp">
-      </a>
-      <a href="#">
-          <img src="icons/instagram.png" alt="Instagram">
-      </a>
+      <a href="#"><img src="icons/facebook.png" alt="Facebook"></a>
+      <a href="#"><img src="icons/whatsapp.png" alt="Whatsapp"></a>
+      <a href="#"><img src="icons/instagram.png" alt="Instagram"></a>
     </div>
   </div>
   <div class="copyright">
