--- a/SIGETER/signup.html
+++ b/SIGETER/signup.html
@@ -13,9 +13,10 @@
   <div class="logo">SIGETER</div>
   <nav>
     <a href="index.html">Home</a>
-    <a href="#">About Us</a>
-    <a href="#">Products</a>
-    <a href="#">Testimonials</a>
+    <a href="about.html">About Us</a>
+    <a href="event-category.html">Event Categories</a>
+    <a href="product.html">Products</a>
+    <a href="testimoni.html">Testimonials</a>
   </nav>
   <div class="icons">
     <a href="cart.html">
