--- a/SIGETER/category.html
+++ b/SIGETER/category.html
@@ -12,7 +12,7 @@
   <div class="logo">SIGETER</div>
   <nav>
     <a href="index.html">Home</a>
-    <a href="event-category.html">Event Categories</a>
+    <a href="category.html">Categories</a>
     <a href="product.html">Products</a>
     <a href="testimoni.html">Testimonials</a>
     <a href="about.html">About Us</a>
@@ -30,6 +30,13 @@
   </div>
 </header>
 
+<!-- Sidebar -->
+<div class="sidenav">
+  <a href="#">Home</a>
+  <a href="#">Categories</a>
+  <a href="#">Event Calender</a>
+</div>
+
 <section class="categories-section">
   <h1>Explore Event Categories</h1>
   <div class="category-container">
@@ -38,28 +45,28 @@
       <img src="pict/concert.jpg" alt="Concerts">
       <h2>Concerts</h2>
       <p>Find upcoming music events and live performances.</p>
-      <a href="concerts.html" class="btn-category">Explore</a>
+      <a href="#" class="btn-category">Add To Cart</a>
     </div>
 
     <div class="category-item">
       <img src="pict/sports.jpg" alt="Sports">
       <h2>Sports</h2>
       <p>Discover live sports events and competitions near you.</p>
-      <a href="sports.html" class="btn-category">Explore</a>
+      <a href="#" class="btn-category">Add To Cart</a>
     </div>
 
     <div class="category-item">
       <img src="pict/conference.jpg" alt="Conferences">
       <h2>Conferences</h2>
       <p>Attend professional conferences and seminars.</p>
-      <a href="conferences.html" class="btn-category">Explore</a>
+      <a href="#" class="btn-category">Add To Cart</a>
     </div>
 
     <div class="category-item">
       <img src="pict/workshop.jpg" alt="Workshops">
       <h2>Workshops</h2>
       <p>Participate in skill-building workshops.</p>
-      <a href="workshops.html" class="btn-category">Explore</a>
+      <a href="#" class="btn-category">Add To Cart</a>
     </div>
 
   </div>
