--- a/SIGETER/index.html
+++ b/SIGETER/index.html
@@ -13,9 +13,9 @@
   <div class="logo">SIGETER</div>
 
   <!-- Main nav links in header -->
-  <nav>
+  <nav class="navbar">
     <a href="index.html">Home</a>
-    <a href="event-category.html">Event Categories</a>
+    <a href="category.html">Categories</a>
     <a href="product.html">Products</a>
     <a href="testimoni.html">Testimonials</a>
     <a href="about.html">About Us</a>
@@ -28,6 +28,30 @@
   </div>
 </header>
 
+<!-- Sidebar -->
+<div class="sidenav_inx">
+  <a href="#">Home</a>
+  <a href="#">Categories</a>
+  <a href="#">Event Calender</a>
+</div>
+
+<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. <br>
+  Quos expedita eveniet aliquid similique voluptatum, sit tenetur cumque excepturi et non repudiandae. <br>
+  Laboriosam sed minima nihil impedit est explicabo aspernatur quis.</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, porro animi. Necessitatibus doloribus, eveniet iste numquam doloremque assumenda ab minima, laudantium, in quod tempora iusto aspernatur repudiandae nihil fuga dolores.</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, porro animi. Necessitatibus doloribus, eveniet iste numquam doloremque assumenda ab minima, laudantium, in quod tempora iusto aspernatur repudiandae nihil fuga dolores.</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, porro animi. Necessitatibus doloribus, eveniet iste numquam doloremque assumenda ab minima, laudantium, in quod tempora iusto aspernatur repudiandae nihil fuga dolores.</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, porro animi. Necessitatibus doloribus, eveniet iste numquam doloremque assumenda ab minima, laudantium, in quod tempora iusto aspernatur repudiandae nihil fuga dolores.</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, porro animi. Necessitatibus doloribus, eveniet iste numquam doloremque assumenda ab minima, laudantium, in quod tempora iusto aspernatur repudiandae nihil fuga dolores.</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, porro animi. Necessitatibus doloribus, eveniet iste numquam doloremque assumenda ab minima, laudantium, in quod tempora iusto aspernatur repudiandae nihil fuga dolores.</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, porro animi. Necessitatibus doloribus, eveniet iste numquam doloremque assumenda ab minima, laudantium, in quod tempora iusto aspernatur repudiandae nihil fuga dolores.</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, porro animi. Necessitatibus doloribus, eveniet iste numquam doloremque assumenda ab minima, laudantium, in quod tempora iusto aspernatur repudiandae nihil fuga dolores.</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, porro animi. Necessitatibus doloribus, eveniet iste numquam doloremque assumenda ab minima, laudantium, in quod tempora iusto aspernatur repudiandae nihil fuga dolores.</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, porro animi. Necessitatibus doloribus, eveniet iste numquam doloremque assumenda ab minima, laudantium, in quod tempora iusto aspernatur repudiandae nihil fuga dolores.</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, porro animi. Necessitatibus doloribus, eveniet iste numquam doloremque assumenda ab minima, laudantium, in quod tempora iusto aspernatur repudiandae nihil fuga dolores.</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, porro animi. Necessitatibus doloribus, eveniet iste numquam doloremque assumenda ab minima, laudantium, in quod tempora iusto aspernatur repudiandae nihil fuga dolores.</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, porro animi. Necessitatibus doloribus, eveniet iste numquam doloremque assumenda ab minima, laudantium, in quod tempora iusto aspernatur repudiandae nihil fuga dolores.</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, porro animi. Necessitatibus doloribus, eveniet iste numquam doloremque assumenda ab minima, laudantium, in quod tempora iusto aspernatur repudiandae nihil fuga dolores.</p>
 <!-- Your other sections (e.g., Featured Products, Testimonials, etc.) -->
 
 <footer>
