--- a/SIGETER/about.html
+++ b/SIGETER/about.html
@@ -12,7 +12,7 @@
   <div class="logo">SIGETER</div>
   <nav>
     <a href="index.html">Home</a>
-    <a href="event-category.html">Event Categories</a>
+    <a href="category.html">Categories</a>
     <a href="product.html">Products</a>
     <a href="testimoni.html">Testimonials</a>
     <a href="about.html">About Us</a>
