--- a/SIGETER/logout.html
+++ b/SIGETER/logout.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Logout</title>
   <link rel="stylesheet" href="style.css">
-  <style>
+  <!-- <style>
     body {
       display: flex;
       justify-content: center;
@@ -14,30 +14,7 @@
       background-color: #f4f4f4;
       font-family: Arial, sans-serif;
     }
-    .logout-container {
-      text-align: center;
-      background: white;
-      padding: 30px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      border-radius: 10px;
-    }
-    h1 {
-      color: #333;
-    }
-    p {
-      margin: 20px 0;
-      color: #555;
-    }
-    .btn-primary {
-      background-color: #007bff;
-      color: white;
-      padding: 10px 20px;
-      text-decoration: none;
-      border-radius: 5px;
-      display: inline-block;
-      margin-top: 10px;
-    }
-  </style>
+  </style> -->
 </head>
 <body>
 
