--- a/SIGETER/testimoni.html
+++ b/SIGETER/testimoni.html
@@ -15,7 +15,7 @@
   <!-- Main nav links in header -->
   <nav>
     <a href="index.html">Home</a>
-    <a href="event-category.html">Event Categories</a>
+    <a href="category.html">Categories</a>
     <a href="product.html">Products</a>
     <a href="testimoni.html" class="active">Testimonials</a>
     <a href="about.html">About Us</a>
