deletting category file dan update untuk ticket dll

--- a/SIGETER/about.html
+++ b/SIGETER/about.html
@@ -12,8 +12,7 @@
   <div class="logo">SIGETER</div>
   <nav>
     <a href="index.html">Home</a>
-    <a href="category.html">Categories</a>
-    <a href="product.html">Products</a>
+    <a href="ticket.html">Tickets</a>
     <a href="testimoni.html">Testimonials</a>
     <a href="about.html">About Us</a>
   </nav>
@@ -31,6 +30,8 @@
 </header>
 
 <section class="about-section">
+  <br>
+  <br>
   <h1>About SIGETER</h1>
   <p>At SIGETER, we are committed to delivering the highest quality products and exceptional service. Our mission is to provide value and satisfaction to every customer.</p>
   
