--- a/SIGETER/index.html
+++ b/SIGETER/index.html
@@ -6,7 +6,7 @@
   <title>Home Page</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="home">
 
 <header>
   <!-- Logo to trigger sidebar -->
@@ -15,8 +15,7 @@
   <!-- Main nav links in header -->
   <nav class="navbar">
     <a href="index.html">Home</a>
-    <a href="category.html">Categories</a>
-    <a href="product.html">Products</a>
+    <a href="ticket.html">Tickets</a>
     <a href="testimoni.html">Testimonials</a>
     <a href="about.html">About Us</a>
   </nav>
@@ -31,7 +30,7 @@
 <!-- Sidebar -->
 <div class="sidenav_inx">
   <a href="#">Home</a>
-  <a href="#">Categories</a>
+  <a href="#">Tickets</a>
   <a href="#">Event Calender</a>
 </div>
 
