--- a/SIGETER/signup.html
+++ b/SIGETER/signup.html
@@ -13,8 +13,7 @@
   <div class="logo">SIGETER</div>
   <nav>
     <a href="index.html">Home</a>
-    <a href="event-category.html">Event Categories</a>
-    <a href="product.html">Products</a>
+    <a href="ticket.html">Tickets</a>
     <a href="testimoni.html">Testimonials</a>
     <a href="about.html">About Us</a>
   </nav>
