--- a/SIGETER/index.html
+++ b/SIGETER/index.html
@@ -27,30 +27,25 @@
   </div>
 </header>
 
-<!-- Sidebar -->
+<!-- Sidenav -->
 <div class="sidenav_inx">
   <a href="#">Home</a>
   <a href="#">Tickets</a>
   <a href="#">Event Calender</a>
 </div>
 
-<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. <br>
-  Quos expedita eveniet aliquid similique voluptatum, sit tenetur cumque excepturi et non repudiandae. <br>
-  Laboriosam sed minima nihil impedit est explicabo aspernatur quis.</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, porro animi. Necessitatibus doloribus, eveniet iste numquam doloremque assumenda ab minima, laudantium, in quod tempora iusto aspernatur repudiandae nihil fuga dolores.</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, porro animi. Necessitatibus doloribus, eveniet iste numquam doloremque assumenda ab minima, laudantium, in quod tempora iusto aspernatur repudiandae nihil fuga dolores.</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, porro animi. Necessitatibus doloribus, eveniet iste numquam doloremque assumenda ab minima, laudantium, in quod tempora iusto aspernatur repudiandae nihil fuga dolores.</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, porro animi. Necessitatibus doloribus, eveniet iste numquam doloremque assumenda ab minima, laudantium, in quod tempora iusto aspernatur repudiandae nihil fuga dolores.</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, porro animi. Necessitatibus doloribus, eveniet iste numquam doloremque assumenda ab minima, laudantium, in quod tempora iusto aspernatur repudiandae nihil fuga dolores.</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, porro animi. Necessitatibus doloribus, eveniet iste numquam doloremque assumenda ab minima, laudantium, in quod tempora iusto aspernatur repudiandae nihil fuga dolores.</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, porro animi. Necessitatibus doloribus, eveniet iste numquam doloremque assumenda ab minima, laudantium, in quod tempora iusto aspernatur repudiandae nihil fuga dolores.</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, porro animi. Necessitatibus doloribus, eveniet iste numquam doloremque assumenda ab minima, laudantium, in quod tempora iusto aspernatur repudiandae nihil fuga dolores.</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, porro animi. Necessitatibus doloribus, eveniet iste numquam doloremque assumenda ab minima, laudantium, in quod tempora iusto aspernatur repudiandae nihil fuga dolores.</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, porro animi. Necessitatibus doloribus, eveniet iste numquam doloremque assumenda ab minima, laudantium, in quod tempora iusto aspernatur repudiandae nihil fuga dolores.</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, porro animi. Necessitatibus doloribus, eveniet iste numquam doloremque assumenda ab minima, laudantium, in quod tempora iusto aspernatur repudiandae nihil fuga dolores.</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, porro animi. Necessitatibus doloribus, eveniet iste numquam doloremque assumenda ab minima, laudantium, in quod tempora iusto aspernatur repudiandae nihil fuga dolores.</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, porro animi. Necessitatibus doloribus, eveniet iste numquam doloremque assumenda ab minima, laudantium, in quod tempora iusto aspernatur repudiandae nihil fuga dolores.</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, porro animi. Necessitatibus doloribus, eveniet iste numquam doloremque assumenda ab minima, laudantium, in quod tempora iusto aspernatur repudiandae nihil fuga dolores.</p>
+<div class="par">
+  <h1>Welcome to SIGETER!</h1>
+  <p>Your Trusted Platform for Planning and Managing Events  
+  <br><br>
+  Are you looking to create an unforgettable event? SIGETER is here to help you bring your dream event to life, from music concerts and professional seminars to celebration parties. We provide the best services and resources to ensure every detail of your event is executed flawlessly.  
+  <br><br>
+  With SIGETER, managing events becomes easier, more efficient, and enjoyable. Explore various event categories, find inspiration, and leave it to us to make your event truly unforgettable.  
+  <br><br>
+  Start your journey with SIGETER today!  
+  Because every event deserves to be perfect.  
+  </p>  
+</div>
 <!-- Your other sections (e.g., Featured Products, Testimonials, etc.) -->
 
 <footer>
