--- a/SIGETER/ticket.html
+++ b/SIGETER/ticket.html
@@ -29,32 +29,32 @@
   </div>
 </header>
 
-<section class="categories-section">
+<section class="ticket-section">
   <h1>Explore Event Tickets</h1>
-  <div class="category-container">
+  <div class="ticket-container">
 
-    <div class="category-item">
+    <div class="ticket-item">
       <img src="pict/concert.jpg" alt="Concerts">
       <h2>Concerts</h2>
       <p>Find upcoming music events and live performances.</p>
       <a href="#" class="btn-category">Add To Cart</a>
     </div>
 
-    <div class="category-item">
+    <div class="ticket-item">
       <img src="pict/sports.jpg" alt="Sports">
       <h2>Sports</h2>
       <p>Discover live sports events and competitions near you.</p>
       <a href="#" class="btn-category">Add To Cart</a>
     </div>
 
-    <div class="category-item">
+    <div class="ticket-item">
       <img src="pict/conference.jpg" alt="Conferences">
       <h2>Conferences</h2>
       <p>Attend professional conferences and seminars.</p>
       <a href="#" class="btn-category">Add To Cart</a>
     </div>
 
-    <div class="category-item">
+    <div class="ticket-item">
       <img src="pict/workshop.jpg" alt="Workshops">
       <h2>Workshops</h2>
       <p>Participate in skill-building workshops.</p>
